# OsiLabs

./: .gitignore  README.md
Kolok1/: Readme.md
Lab1/: CMakeLists.txt
Lab1/Creator/: Creator.cpp
Lab1/Main/: main.cpp
Lab1/Reporter/: Reporter.cpp
Lab2/: CMakeLists.txt
Lab2/src/: main14.cpp  main98.cpp
Lab2/tests/: test14.cpp  test98.cpp
